--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "joi-browser": "^13.4.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0"
   }
 }
