--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "config": "^3.3.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^6.0.1",
     "joi-browser": "^13.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "winston": "^2.4.7",
     "winston-mongodb": "^5.1.1"
-  }  
+  }
 }
